--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
-matplotlib
-scipy
-numpy
-peakutils
-graphviz
-joblib
-scikit-image
+joblib==1.0.0
+imageio==2.9.0
+scikit_image==0.17.2
+PeakUtils==1.3.3
+cvxpy==1.1.7
+scipy==1.5.4
+matplotlib==3.3.3
+numpy==1.19.4
+Shapely==1.7.1
+skimage==0.0
